Add ids to request messages